# MediGraph-AI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt  streamlit_demo.py
backend/app/: __init__.py  api.py  config.py  database.py  graph.py  models.py  schemas.py  state.py
backend/app/memory/: __init__.py  session_memory.py
backend/app/middleware/: __init__.py  logging_middleware.py
backend/app/nodes/: __init__.py  diagnostic_agent.py  physician_review.py  report_agent.py  supervisor.py
backend/app/prompts/: __init__.py
backend/app/services/: __init__.py  consultation_service.py
backend/app/tools/: __init__.py  mcp_client.py  medical_tools.py  patient_tools.py  recommendation_tools.py
backend/tests/: __init__.py  conftest.py  test_workflow.py
docs/: API.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  FILE_GUIDE.md  INSTALLATION.md
docs/diagrams/: DIAGRAMS.md
docs/reports/: ACADEMIC_REPORT.md
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: Consultation.jsx  ConsultationHistory.jsx  Dashboard.jsx  PatientRegistration.jsx  PhysicianReview.jsx  Questionnaire.jsx  Reports.jsx  Settings.jsx
frontend/src/services/: api.js
mcp_server/: server.py  tools.py
scripts/: generate_presentation.py
