[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medigraph-ai"
version = "1.0.0"
description = "Intelligent Multi-Agent Clinical Orientation System"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "mcp_server*"]
